Added dir classP, fix path

--- a/index.html
+++ b/index.html
@@ -41,25 +41,25 @@
                     <a class="nav-link" href="index.html"><i class="fa-solid fa-gun"></i> Gunslinger</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../classP/hr.html"><i class="fa-solid fa-explosion"></i> Hellraiser</a>
+                    <a class="nav-link" href="/classP/hr.html"><i class="fa-solid fa-explosion"></i> Hellraiser</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../classP/m.html"><i class="fa-solid fa-suitcase-medical"></i> Medic</a>
+                    <a class="nav-link" href="/classP/m.html"><i class="fa-solid fa-suitcase-medical"></i> Medic</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../classP/f.html"><i class="fa-solid fa-screwdriver-wrench"></i> Fixer</a>
+                    <a class="nav-link" href="/classP/f.html"><i class="fa-solid fa-screwdriver-wrench"></i> Fixer</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../classP/s.html"><i class="fa-solid fa-scissors"></i> Slasher</a>
+                    <a class="nav-link" href="/classP/s.html"><i class="fa-solid fa-scissors"></i> Slasher</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../classP/ex.html"><i class="fa-solid fa-mask"></i> Exterminator</a>
+                    <a class="nav-link" href="/classP/ex.html"><i class="fa-solid fa-mask"></i> Exterminator</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../classP/dm.html"><i class="fa-solid fa-robot"></i> Drone Master</a>
+                    <a class="nav-link" href="/classP/dm.html"><i class="fa-solid fa-robot"></i> Drone Master</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../classP/v.html"><i class="fa-solid fa-shield-halved"></i> Vanguard</a>
+                    <a class="nav-link" href="/classP/v.html"><i class="fa-solid fa-shield-halved"></i> Vanguard</a>
                 </li>
             </ul>
         </div>
@@ -143,13 +143,13 @@
     <footer class="my-2">
         <ul class="nav justify-content-center mt-2">
             <li class="nav-item"><a href="index.html" class="nav-link text-light p-2"><img src="./images/gs_icon.png" alt="GUNSLINGER"></a></li>
-            <li class="nav-item"><a href="../classP/hr.html" class="nav-link text-light p-2"><img src="./images/hr_icon.png" alt="HELLRAISER"></a></li>
-            <li class="nav-item"><a href="../classP/m.html" class="nav-link text-light p-2"><img src="./images/m_icon.png" alt="MEDIC"></a></li>
-            <li class="nav-item"><a href="../classP/f.html" class="nav-link text-light p-2"><img src="./images/f_icon.png" alt="FIXER"></a></li>
-            <li class="nav-item"><a href="../classP/s.html" class="nav-link text-light p-2"><img src="./images/s_icon.png" alt="SLASHER"></a></li>
-            <li class="nav-item"><a href="../classP/ex.html" class="nav-link text-light p-2"><img src="./images/ex_icon.png" alt="EXTERMINATOR"></a></li>
-            <li class="nav-item"><a href="../classP/dm.html" class="nav-link text-light p-2"><img src="./images/dm_icon.png" alt="DRONEMASTER"></a></li>
-            <li class="nav-item"><a href="../classP/v.html" class="nav-link text-light p-2"><img src="./images/vg_icon.png" alt="VANGUARD"></a></li>
+            <li class="nav-item"><a href="/classP/hr.html" class="nav-link text-light p-2"><img src="./images/hr_icon.png" alt="HELLRAISER"></a></li>
+            <li class="nav-item"><a href="/classP/m.html" class="nav-link text-light p-2"><img src="./images/m_icon.png" alt="MEDIC"></a></li>
+            <li class="nav-item"><a href="/classP/f.html" class="nav-link text-light p-2"><img src="./images/f_icon.png" alt="FIXER"></a></li>
+            <li class="nav-item"><a href="/classP/s.html" class="nav-link text-light p-2"><img src="./images/s_icon.png" alt="SLASHER"></a></li>
+            <li class="nav-item"><a href="/classP/ex.html" class="nav-link text-light p-2"><img src="./images/ex_icon.png" alt="EXTERMINATOR"></a></li>
+            <li class="nav-item"><a href="/classP/dm.html" class="nav-link text-light p-2"><img src="./images/dm_icon.png" alt="DRONEMASTER"></a></li>
+            <li class="nav-item"><a href="/classP/v.html" class="nav-link text-light p-2"><img src="./images/vg_icon.png" alt="VANGUARD"></a></li>
         </ul>
         <p class="text-center text-light mb-0">© 2023 CapriceYuri</p>
     </footer>
