--- a/classP/m.html
+++ b/classP/m.html
@@ -134,7 +134,7 @@
     </div>
 
     <div class="card text-center border-0 transparent text-light shadow">
-        <div class="card-body my-2">
+        <div class="card-body">
             <h5 class="card-title perk-name m-0"></h5>
             <div class="card-text perk-info"></div>
         </div>
