--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="navbar-brand mx-5">GUNSLINGER</div>
             </div>
             <div>
-                <a href="../weapon_pages/weapon.html" class="btn btn-secondary"><i class="fa-solid fa-arrow-right-to-bracket fa-flip-vertical fa-lg"></i></a>
+                <a href="weapon_pages/weapon.html" class="btn btn-secondary"><i class="fa-solid fa-arrow-right-to-bracket fa-flip-vertical fa-lg"></i></a>
             </div>
         </div>
     </nav>
