--- a/weapon_pages/stats/t1scout.html
+++ b/weapon_pages/stats/t1scout.html
@@ -8,9 +8,9 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous" defer></script>
-    <link rel="stylesheet" href="style3.css">
+    <link rel="stylesheet" href="../style3.css">
     <script src="https://kit.fontawesome.com/852e8a85e4.js" crossorigin="anonymous" defer></script>
-    <script src="t1smg.js" defer></script>
+    <script src="../logic/t1scout.js" defer></script>
 </head>
 
 <body>
@@ -24,7 +24,7 @@
                 <div class="navbar-brand mx-5">WEAPONS</div>
             </div>
             <div>
-                <a href="weapon.html" class="btn btn-secondary"><i class="fa-solid fa-arrow-right-to-bracket fa-flip-horizontal fa-lg"></i></a>
+                <a href="../weapon.html" class="btn btn-secondary"><i class="fa-solid fa-arrow-right-to-bracket fa-flip-horizontal fa-lg"></i></a>
             </div>
         </div>
     </nav>
@@ -38,28 +38,28 @@
         <div class="offcanvas-body">
             <ul class="nav flex-column rounded-4 ms-5">
                 <li class="nav-item">
-                    <a class="nav-link" href="../index.html"><i class="fa-solid fa-gun"></i> Gunslinger</a>
+                    <a class="nav-link" href="/index.html"><i class="fa-solid fa-gun"></i> Gunslinger</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../hr.html"><i class="fa-solid fa-explosion"></i> Hellraiser</a>
+                    <a class="nav-link" href="/classP/hr.html"><i class="fa-solid fa-explosion"></i> Hellraiser</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../m.html"><i class="fa-solid fa-suitcase-medical"></i> Medic</a>
+                    <a class="nav-link" href="/classP/m.html"><i class="fa-solid fa-suitcase-medical"></i> Medic</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../f.html"><i class="fa-solid fa-screwdriver-wrench"></i> Fixer</a>
+                    <a class="nav-link" href="/classP/f.html"><i class="fa-solid fa-screwdriver-wrench"></i> Fixer</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../s.html"><i class="fa-solid fa-scissors"></i> Slasher</a>
+                    <a class="nav-link" href="/classP/s.html"><i class="fa-solid fa-scissors"></i> Slasher</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../ex.html"><i class="fa-solid fa-mask"></i> Exterminator</a>
+                    <a class="nav-link" href="/classP/ex.html"><i class="fa-solid fa-mask"></i> Exterminator</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../dm.html"><i class="fa-solid fa-robot"></i> Drone Master</a>
+                    <a class="nav-link" href="/classP/dm.html"><i class="fa-solid fa-robot"></i> Drone Master</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../v.html"><i class="fa-solid fa-shield-halved"></i> Vanguard</a>
+                    <a class="nav-link" href="/classP/v.html"><i class="fa-solid fa-shield-halved"></i> Vanguard</a>
                 </li>
             </ul>
         </div>
@@ -68,15 +68,15 @@
     <!-- WEAPON CONTENT -->
     <div class="d-flex flex-column gap-4 flex-md-row mx-5 p-5 py-md-5 align-items-center justify-content-center">
         <div class="col-md-6 col-12 d-flex align-items-center justify-content-center">
-            <div class="text-center"><img src="../images/t1-smg.jpeg" width="300px"></div>
+            <div class="text-center"><img src="../../images/t1-scout.jpeg" width="300px"></div>
         </div>
         <div class="col-md-6 col-12">
             <div class="d-flex justify-content-between">
                 <div class="text-white">Power</div>
-                <div class="text-white power-value">6</div>
+                <div class="text-white power-value">5</div>
             </div>
             <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="height: 20px;">
-                <div class="progress-bar power-bar progress-bar-striped progress-bar-animated bg-secondary text-warning" style="width: 60%"></div>
+                <div class="progress-bar power-bar progress-bar-striped progress-bar-animated bg-secondary text-warning" style="width: 50%"></div>
             </div>
             <div class="d-flex justify-content-between">
                 <div class="text-white">Accuracy</div>
@@ -94,10 +94,10 @@
             </div>
             <div class="d-flex justify-content-between">
                 <div class="text-white">Fire Rate</div>
-                <div class="text-white rate-value">7</div>
+                <div class="text-white rate-value">3</div>
             </div>
             <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="height: 20px;">
-                <div class="progress-bar rate-bar progress-bar-striped progress-bar-animated bg-secondary text-warning" style="width: 70%"></div>
+                <div class="progress-bar rate-bar progress-bar-striped progress-bar-animated bg-secondary text-warning" style="width: 30%"></div>
             </div>
             <div class="d-flex justify-content-between">
                 <div class="text-white">Max Penetration</div>
@@ -108,7 +108,7 @@
             </div>
             <div class="d-flex justify-content-between">
                 <div class="text-white">Magazine</div>
-                <div class="text-white mag-value">48</div>
+                <div class="text-white mag-value">30</div>
             </div>
             <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="height: 20px;">
                 <div class="progress-bar mag-bar progress-bar-striped progress-bar-animated bg-secondary text-warning" style="width: 100%"></div>
@@ -122,23 +122,30 @@
         <div class="list-group">
 
             <label class="list-group-item list-group-item-danger d-flex gap-2">
-                <input type="radio" name="uniquePerk" id="snakebite">
-                <div>Snake Bite
-                    <small class="d-block text-body-secondary">Rate of fire is increased by 50%.</small>
+                <input type="radio" name="uniquePerk" id="wolfpack">
+                <div>Wolf Pack
+                    <small class="d-block text-body-secondary">+10% Damage per teammate carrying a weapon with the same perk (including yourself, up to 40%).</small>
                 </div>
             </label>
 
             <label class="list-group-item list-group-item-danger d-flex gap-2">
                 <input type="radio" name="uniquePerk">
-                <div>Point-Blank Focus II
-                    <small class="d-block text-body-secondary">+50% damage at less than 4 meters, -15% damage at a greater distance.</small>
+                <div>Veteran II
+                    <small class="d-block text-body-secondary">+25% Reloading speed. The reloading speed bonus is stackable but can't be higher than 50%.</small>
                 </div>
             </label>
 
             <label class="list-group-item list-group-item-danger d-flex gap-2">
                 <input type="radio" name="uniquePerk">
-                <div>CQB Specialist
-                    <small class="d-block text-body-secondary">Killing 5 zombies with melee attacks in rapid succession instantly reloads this weapon.</small>
+                <div>Sweet Leftovers
+                    <small class="d-block text-body-secondary">+25% Damage while you have less than 50% ammo left for this weapon.</small>
+                </div>
+            </label>
+
+            <label class="list-group-item list-group-item-danger d-flex gap-2">
+                <input type="radio" name="uniquePerk">
+                <div>Brain Buster
+                    <small class="d-block text-body-secondary">Headshots from this weapon increase damage by 15% and reduce spread for the next shot.</small>
                 </div>
             </label>
 
@@ -148,38 +155,38 @@
 
             <label class="list-group-item list-group-item-warning d-flex gap-2">
                 <input type="checkbox" name="commonPerk" id="nod1">
-                <div>Extended Mag
-                    <small class="d-block text-body-secondary">+4 Magazine capacity.</small>
+                <div>Custom Mag II
+                    <small class="d-block text-body-secondary">+10 Magazine capacity, -1 Handling.</small>
                 </div>
             </label>
             <label class="list-group-item list-group-item-warning d-flex gap-2">
                 <input type="checkbox" name="commonPerk" id="nod2">
-                <div>Custom Sight
-                    <small class="d-block text-body-secondary">+2 Accuracy, -10% Reloading speed.</small>
+                <div>Custom Rounds I
+                    <small class="d-block text-body-secondary">+1 Accuracy, +30% Efficient range.</small>
                 </div>
             </label>
             <label class="list-group-item list-group-item-warning d-flex gap-2">
                 <input type="checkbox" name="commonPerk" id="nod3">
-                <div>Ergonomics II
-                    <small class="d-block text-body-secondary">+2 Handling, -15% Damage.</small>
+                <div>Custom Barrel
+                    <small class="d-block text-body-secondary"> +1 Accuracy, +10% Damage.</small>
                 </div>
             </label>
             <label class="list-group-item list-group-item-warning d-flex gap-2">
                 <input type="checkbox" name="commonPerk" id="nod4">
-                <div>Power
-                    <small class="d-block text-body-secondary">+10% Damage.</small>
+                <div>Ergonomics II
+                    <small class="d-block text-body-secondary">+2 Handling, -10% Reloading speed.</small>
                 </div>
             </label>
             <label class="list-group-item list-group-item-warning d-flex gap-2">
-                <input type="checkbox" name="commonPerk" id="nod5">
-                <div>Friend Not Foe
-                    <small class="d-block text-body-secondary">-25% Friendly fire damage (dealt and received).</small>
+                <input type="checkbox" name="commonPerk">
+                <div>Fine Motor Skills I
+                    <small class="d-block text-body-secondary">+25% Weapon switching speed.</small>
                 </div>
             </label>
             <label class="list-group-item list-group-item-warning d-flex gap-2">
-                <input type="checkbox" name="commonPerk" id="nod6">
-                <div>Veteran I
-                    <small class="d-block text-body-secondary">+15% Reloading speed. The reloading speed bonus is stackable but can't be higher than 50%.</small>
+                <input type="checkbox" name="commonPerk">
+                <div>Bounty Hunter
+                    <small class="d-block text-body-secondary">+15% Damage to special zombies.</small>
                 </div>
             </label>
             <label class="list-group-item list-group-item-warning d-flex gap-2">
