--- a/weapon_pages/weapon.html
+++ b/weapon_pages/weapon.html
@@ -37,28 +37,28 @@
         <div class="offcanvas-body">
             <ul class="nav flex-column rounded-4 ms-5">
                 <li class="nav-item">
-                    <a class="nav-link" href="../index.html"><i class="fa-solid fa-gun"></i> Gunslinger</a>
+                    <a class="nav-link" href="/index.html"><i class="fa-solid fa-gun"></i> Gunslinger</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../hr.html"><i class="fa-solid fa-explosion"></i> Hellraiser</a>
+                    <a class="nav-link" href="/classP/hr.html"><i class="fa-solid fa-explosion"></i> Hellraiser</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../m.html"><i class="fa-solid fa-suitcase-medical"></i> Medic</a>
+                    <a class="nav-link" href="/classP/m.html"><i class="fa-solid fa-suitcase-medical"></i> Medic</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../f.html"><i class="fa-solid fa-screwdriver-wrench"></i> Fixer</a>
+                    <a class="nav-link" href="/classP/f.html"><i class="fa-solid fa-screwdriver-wrench"></i> Fixer</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../s.html"><i class="fa-solid fa-scissors"></i> Slasher</a>
+                    <a class="nav-link" href="/classP/s.html"><i class="fa-solid fa-scissors"></i> Slasher</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../ex.html"><i class="fa-solid fa-mask"></i> Exterminator</a>
+                    <a class="nav-link" href="/classP/ex.html"><i class="fa-solid fa-mask"></i> Exterminator</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../dm.html"><i class="fa-solid fa-robot"></i> Drone Master</a>
+                    <a class="nav-link" href="/classP/dm.html"><i class="fa-solid fa-robot"></i> Drone Master</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../v.html"><i class="fa-solid fa-shield-halved"></i> Vanguard</a>
+                    <a class="nav-link" href="/classP/v.html"><i class="fa-solid fa-shield-halved"></i> Vanguard</a>
                 </li>
             </ul>
         </div>
@@ -73,7 +73,7 @@
             </div>
             <div class="col-md-4 col-6 d-flex justify-content-center">
                 <div class="card border-0">
-                    <a href="#"><img src="../images/t1-scout.jpeg" class="card-img-top"></a>
+                    <a href="stats/t1scout.html"><img src="../images/t1-scout.jpeg" class="card-img-top"></a>
                     <div class="card-body text-center">
                         <small class="card-title text-light">Scout Rifle</small>
                     </div>
@@ -81,7 +81,7 @@
             </div>
             <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
-                    <a href="#"><img src="../images/t1-smg.jpeg" class="card-img-top"></a>
+                    <a href="stats/t1smg.html"><img src="../images/t1-smg.jpeg" class="card-img-top"></a>
                     <div class="card-body text-center">
                         <small class="card-title text-light">Compact SMG</small>
                     </div>
