--- a/weapon_pages/stats/t1scout.html
+++ b/weapon_pages/stats/t1scout.html
@@ -119,7 +119,7 @@
 
     <div class="d-flex flex-column flex-md-row p-4 gap-4 py-md-3 align-items-center justify-content-center align-items-md-start">
 
-        <div class="list-group">
+        <div class="list-group w-100">
 
             <label class="list-group-item list-group-item-danger d-flex gap-2">
                 <input type="radio" name="uniquePerk" id="wolfpack">
@@ -151,7 +151,7 @@
 
         </div>
 
-        <div class="list-group">
+        <div class="list-group w-100">
 
             <label class="list-group-item list-group-item-warning d-flex gap-2">
                 <input type="checkbox" name="commonPerk" id="nod1">
@@ -195,6 +195,7 @@
                     <small class="d-block text-body-secondary">+10% Max ammo.</small>
                 </div>
             </label>
+            
         </div>
     </div>
 
