--- a/weapon_pages/stats/t1shotgun.html
+++ b/weapon_pages/stats/t1shotgun.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous" defer></script>
     <link rel="stylesheet" href="../style3.css">
     <script src="https://kit.fontawesome.com/852e8a85e4.js" crossorigin="anonymous" defer></script>
-    <script src="../logic/t1smg.js" defer></script>
+    <script src="../logic/t1shot.js" defer></script>
 </head>
 
 <body>
@@ -68,36 +68,36 @@
     <!-- WEAPON CONTENT -->
     <div class="d-flex flex-column gap-4 flex-md-row mx-5 p-5 py-md-5 align-items-center justify-content-center">
         <div class="col-md-6 col-12 d-flex align-items-center justify-content-center">
-            <div class="text-center"><img src="../../images/t1-smg.jpeg" width="300px"></div>
+            <div class="text-center"><img src="../../images/t1-shotgun.jpeg" width="300px"></div>
         </div>
         <div class="col-md-6 col-12">
             <div class="d-flex justify-content-between">
                 <div class="text-white">Power</div>
-                <div class="text-white power-value">6</div>
+                <div class="text-white power-value">11</div>
             </div>
             <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="height: 20px;">
-                <div class="progress-bar power-bar progress-bar-striped progress-bar-animated bg-secondary text-warning" style="width: 60%"></div>
+                <div class="progress-bar power-bar progress-bar-striped progress-bar-animated bg-secondary text-warning" style="width: 110%"></div>
             </div>
             <div class="d-flex justify-content-between">
                 <div class="text-white">Accuracy</div>
-                <div class="text-white acc-value">8</div>
+                <div class="text-white acc-value">3</div>
             </div>
             <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="height: 20px;">
-                <div class="progress-bar acc-bar progress-bar-striped progress-bar-animated bg-secondary text-warning" style="width: 80%"></div>
+                <div class="progress-bar acc-bar progress-bar-striped progress-bar-animated bg-secondary text-warning" style="width: 30%"></div>
             </div>
             <div class="d-flex justify-content-between">
                 <div class="text-white">Handling</div>
-                <div class="text-white hand-value">6</div>
+                <div class="text-white hand-value">3</div>
             </div>
             <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="height: 20px;">
-                <div class="progress-bar hand-bar progress-bar-striped progress-bar-animated bg-secondary text-warning" style="width: 60%"></div>
+                <div class="progress-bar hand-bar progress-bar-striped progress-bar-animated bg-secondary text-warning" style="width: 30%"></div>
             </div>
             <div class="d-flex justify-content-between">
                 <div class="text-white">Fire Rate</div>
-                <div class="text-white rate-value">7</div>
+                <div class="text-white rate-value">1</div>
             </div>
             <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="height: 20px;">
-                <div class="progress-bar rate-bar progress-bar-striped progress-bar-animated bg-secondary text-warning" style="width: 70%"></div>
+                <div class="progress-bar rate-bar progress-bar-striped progress-bar-animated bg-secondary text-warning" style="width: 10%"></div>
             </div>
             <div class="d-flex justify-content-between">
                 <div class="text-white">Max Penetration</div>
@@ -108,7 +108,7 @@
             </div>
             <div class="d-flex justify-content-between">
                 <div class="text-white">Magazine</div>
-                <div class="text-white mag-value">48</div>
+                <div class="text-white mag-value">12</div>
             </div>
             <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="height: 20px;">
                 <div class="progress-bar mag-bar progress-bar-striped progress-bar-animated bg-secondary text-warning" style="width: 100%"></div>
@@ -122,25 +122,26 @@
         <div class="list-group w-100">
 
             <label class="list-group-item list-group-item-danger d-flex gap-2">
-                <input type="radio" name="uniquePerk" id="snakebite">
-                <div>Snake Bite
-                    <small class="d-block text-body-secondary">Rate of fire is increased by 50%.</small>
+                <input type="radio" name="uniquePerk" id="flechettes">
+                <div>Flechettes
+                    <small class="d-block text-body-secondary">Fires flechettes instead of buckshot rounds. +4 Accuracy, +1 Handling, +1 Penetration, less damage dealt per shot.</small>
                 </div>
             </label>
 
             <label class="list-group-item list-group-item-danger d-flex gap-2">
                 <input type="radio" name="uniquePerk">
-                <div>Point-Blank Focus II
-                    <small class="d-block text-body-secondary">+50% damage at less than 4 meters, -15% damage at a greater distance.</small>
+                <div>Extortion
+                    <small class="d-block text-body-secondary">When this weapon's magazine is empty, killing a zombie with a melee weapon restores 1 round in it.</small>
                 </div>
             </label>
 
             <label class="list-group-item list-group-item-danger d-flex gap-2">
                 <input type="radio" name="uniquePerk">
-                <div>CQB Specialist
-                    <small class="d-block text-body-secondary">Killing 5 zombies with melee attacks in rapid succession instantly reloads this weapon.</small>
+                <div>On Edge
+                    <small class="d-block text-body-secondary">Reload 1 more round per reload action while your health is lower than 25%.</small>
                 </div>
             </label>
+
 
         </div>
 
@@ -149,37 +150,37 @@
             <label class="list-group-item list-group-item-warning d-flex gap-2">
                 <input type="checkbox" name="commonPerk" id="nod1">
                 <div>Extended Mag
-                    <small class="d-block text-body-secondary">+4 Magazine capacity.</small>
+                    <small class="d-block text-body-secondary">+1 Magazine capacity.</small>
                 </div>
             </label>
             <label class="list-group-item list-group-item-warning d-flex gap-2">
                 <input type="checkbox" name="commonPerk" id="nod2">
-                <div>Custom Sight
-                    <small class="d-block text-body-secondary">+2 Accuracy, -10% Reloading speed.</small>
+                <div>Custom Mag II
+                    <small class="d-block text-body-secondary">+2 Magazine capacity, -1 Handling.</small>
                 </div>
             </label>
             <label class="list-group-item list-group-item-warning d-flex gap-2">
                 <input type="checkbox" name="commonPerk" id="nod3">
+                <div>Ergonomics I
+                    <small class="d-block text-body-secondary">+1 Handling, +10% Reloading speed. The reloading speed bonus is stackable but can't be higher than 50%.</small>
+                </div>
+            </label>
+            <label class="list-group-item list-group-item-warning d-flex gap-2">
+                <input type="checkbox" name="commonPerk" id="nod4">
                 <div>Ergonomics II
                     <small class="d-block text-body-secondary">+2 Handling, -15% Damage.</small>
                 </div>
             </label>
             <label class="list-group-item list-group-item-warning d-flex gap-2">
-                <input type="checkbox" name="commonPerk" id="nod4">
-                <div>Power
-                    <small class="d-block text-body-secondary">+10% Damage.</small>
-                </div>
-            </label>
-            <label class="list-group-item list-group-item-warning d-flex gap-2">
                 <input type="checkbox" name="commonPerk" id="nod5">
-                <div>Friend Not Foe
-                    <small class="d-block text-body-secondary">-25% Friendly fire damage (dealt and received).</small>
+                <div>Range
+                    <small class="d-block text-body-secondary">+30% Efficient range.</small>
                 </div>
             </label>
             <label class="list-group-item list-group-item-warning d-flex gap-2">
                 <input type="checkbox" name="commonPerk" id="nod6">
-                <div>Veteran I
-                    <small class="d-block text-body-secondary">+15% Reloading speed. The reloading speed bonus is stackable but can't be higher than 50%.</small>
+                <div>Friend Not Foe
+                    <small class="d-block text-body-secondary">-25% Friendly fire damage (dealt and received).</small>
                 </div>
             </label>
             <label class="list-group-item list-group-item-warning d-flex gap-2">
