--- a/weapon_pages/weapon.html
+++ b/weapon_pages/weapon.html
@@ -89,7 +89,7 @@
             </div>
             <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
-                    <img src="../images/t1-shotgun.jpeg" class="card-img-top">
+                    <a href="stats/t1shotgun.html"><img src="../images/t1-shotgun.jpeg" class="card-img-top"></a>
                     <div class="card-body text-center">
                         <small class="card-title text-light">Shotgun</small>
                     </div>
