Added t2-ak content, completed

--- a/weapon_pages/weapon.html
+++ b/weapon_pages/weapon.html
@@ -113,7 +113,7 @@
             </div>
             <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
-                    <img src="../images/t1-flare.jpeg" class="card-img-top">
+                    <a href="#"><img src="../images/t1-flare.jpeg" class="card-img-top"></a>
                     <div class="card-body text-center">
                         <small class="card-title text-light">Flaregun</small>
                     </div>
@@ -131,7 +131,7 @@
             </div>
             <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
-                    <img src="../images/t2-ak.jpeg" class="card-img-top">
+                    <a href="stats/t2ak.html"><img src="../images/t2-ak.jpeg" class="card-img-top"></a>
                     <div class="card-body text-center">
                         <small class="card-title text-light">Assault Rifle</small>
                     </div>
