--- a/weapon_pages/weapon.html
+++ b/weapon_pages/weapon.html
@@ -139,7 +139,7 @@
             </div>
             <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
-                    <img src="../images/t2-sport.jpeg" class="card-img-top">
+                    <a href="stats/t2sport.html"><img src="../images/t2-sport.jpeg" class="card-img-top"></a>
                     <div class="card-body text-center">
                         <small class="card-title text-light">Sporting Carbine</small>
                     </div>
