Added T2-Classic Bullup content, completed

--- a/weapon_pages/weapon.html
+++ b/weapon_pages/weapon.html
@@ -155,7 +155,7 @@
             </div>
             <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
-                    <img src="../images/t2-bullup.jpeg" class="card-img-top">
+                    <a href="stats/t2classicBU.html"><img src="../images/t2-bullup.jpeg" class="card-img-top"></a>
                     <div class="card-body text-center">
                         <small class="card-title text-light">Classic Bullpup Rifle</small>
                     </div>
