Added T2-Light Automatic content, completed

--- a/weapon_pages/weapon.html
+++ b/weapon_pages/weapon.html
@@ -163,7 +163,7 @@
             </div>
             <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
-                    <img src="../images/t2-lmg.jpeg" class="card-img-top">
+                    <a href="stats/t2law.html"><img src="../images/t2-lmg.jpeg" class="card-img-top"></a>
                     <div class="card-body text-center">
                         <small class="card-title text-light">Light Automatic Weapon</small>
                     </div>
