Added T3-Bullup content, completed

--- a/weapon_pages/weapon.html
+++ b/weapon_pages/weapon.html
@@ -253,7 +253,7 @@
             </div>
             <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
-                    <img src="../images/t3-bullpup.jpeg" class="card-img-top">
+                    <a href="stats/t3bullup.html"><img src="../images/t3-bullpup.jpeg" class="card-img-top"></a>
                     <div class="card-body text-center">
                         <small class="card-title text-light">Bullpup Rifle</small>
                     </div>
