--- a/weapon_pages/stats/t3bullup.html
+++ b/weapon_pages/stats/t3bullup.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous" defer></script>
     <link rel="stylesheet" href="../style3.css">
     <script src="https://kit.fontawesome.com/852e8a85e4.js" crossorigin="anonymous" defer></script>
-    <script src="../logic/t3battleR.js" defer></script>
+    <script src="../logic/t3bullup.js" defer></script>
 </head>
 
 <body>
@@ -68,36 +68,36 @@
     <!-- WEAPON CONTENT -->
     <div class="d-flex flex-column gap-4 flex-md-row mx-5 p-5 py-md-5 align-items-center justify-content-center">
         <div class="col-md-6 col-12 d-flex align-items-center justify-content-center">
-            <div class="text-center"><img src="../../images/t3-battleR.jpeg" width="300px"></div>
+            <div class="text-center"><img src="../../images/t3-bullpup.jpeg" width="300px"></div>
         </div>
         <div class="col-md-6 col-12">
             <div class="d-flex justify-content-between">
                 <div class="text-white">Power</div>
-                <div class="text-white power-value">8</div>
+                <div class="text-white power-value">10</div>
             </div>
             <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="height: 20px;">
-                <div class="progress-bar power-bar progress-bar-striped progress-bar-animated bg-secondary text-warning" style="width: 80%"></div>
+                <div class="progress-bar power-bar progress-bar-striped progress-bar-animated bg-secondary text-warning" style="width: 100%"></div>
             </div>
             <div class="d-flex justify-content-between">
                 <div class="text-white">Accuracy</div>
-                <div class="text-white acc-value">8</div>
+                <div class="text-white acc-value">9</div>
             </div>
             <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="height: 20px;">
-                <div class="progress-bar acc-bar progress-bar-striped progress-bar-animated bg-secondary text-warning" style="width: 80%"></div>
+                <div class="progress-bar acc-bar progress-bar-striped progress-bar-animated bg-secondary text-warning" style="width: 90%"></div>
             </div>
             <div class="d-flex justify-content-between">
                 <div class="text-white">Handling</div>
-                <div class="text-white hand-value">7</div>
+                <div class="text-white hand-value">6</div>
             </div>
             <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="height: 20px;">
-                <div class="progress-bar hand-bar progress-bar-striped progress-bar-animated bg-secondary text-warning" style="width: 70%"></div>
+                <div class="progress-bar hand-bar progress-bar-striped progress-bar-animated bg-secondary text-warning" style="width: 60%"></div>
             </div>
             <div class="d-flex justify-content-between">
                 <div class="text-white">Fire Rate</div>
-                <div class="text-white rate-value">3</div>
+                <div class="text-white rate-value">5</div>
             </div>
             <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="height: 20px;">
-                <div class="progress-bar rate-bar progress-bar-striped progress-bar-animated bg-secondary text-warning" style="width: 30%"></div>
+                <div class="progress-bar rate-bar progress-bar-striped progress-bar-animated bg-secondary text-warning" style="width: 50%"></div>
             </div>
             <div class="d-flex justify-content-between">
                 <div class="text-white">Max Penetration</div>
@@ -123,20 +123,20 @@
 
             <label class="list-group-item list-group-item-danger d-flex gap-2">
                 <input type="radio" name="uniquePerk" id="">
-                <div>Full-Auto
-                    <small class="d-block text-body-secondary">Continuously fires as long as the trigger is pressed.</small>
+                <div>Selective Fire
+                    <small class="d-block text-body-secondary">3-bullet bursts in minizoom, fully automatic mode while hip-firing. -10% Damage and -1 Penetration in the full-auto mode.</small>
                 </div>
             </label>
             <label class="list-group-item list-group-item-danger d-flex gap-2">
                 <input type="radio" name="uniquePerk" id="boatTail">
-                <div>Boat Tail Rounds
-                    <small class="d-block text-body-secondary">+2 Accuracy, +30% Efficient range.</small>
+                <div>Biathlete
+                    <small class="d-block text-body-secondary">While sprinting with this weapon equipped, you receive 5% less damage or 15% less damage if you also carry a Virus sample.</small>
                 </div>
             </label>
             <label class="list-group-item list-group-item-danger d-flex gap-2">
                 <input type="radio" name="uniquePerk" id="">
-                <div>Wolf Grin
-                    <small class="d-block text-body-secondary">When you become the last member of your team still standing, your primary and secondary weapons instantly reload and you get +50% firearm damage.</small>
+                <div>On Edge
+                    <small class="d-block text-body-secondary">+30% Damage while your health is lower than 25%.</small>
                 </div>
             </label>
 
@@ -148,43 +148,43 @@
             <label class="list-group-item list-group-item-warning d-flex gap-2">
                 <input type="checkbox" name="commonPerk" id="nod1">
                 <div>Extended Mag
-                    <small class="d-block text-body-secondary">+5 Magazine capacity.</small>
+                    <small class="d-block text-body-secondary">+3 Magazine capacity.</small>
                 </div>
             </label>
             <label class="list-group-item list-group-item-warning d-flex gap-2">
                 <input type="checkbox" name="commonPerk" id="nod2">
-                <div>Ergonomics II
-                    <small class="d-block text-body-secondary">+2 Handling, -1 Accuracy.</small>
+                <div>Custom Rounds II
+                    <small class="d-block text-body-secondary">+2 Accuracy, -15% Damage.</small>
                 </div>
             </label>
             <label class="list-group-item list-group-item-warning d-flex gap-2">
                 <input type="checkbox" name="commonPerk" id="nod3">
-                <div>Power
-                    <small class="d-block text-body-secondary">+10% Damage.</small>
+                <div>Ergonomics II
+                    <small class="d-block text-body-secondary">+2 Handling, -10% Reloading speed.</small>
                 </div>
             </label>
             <label class="list-group-item list-group-item-warning d-flex gap-2">
                 <input type="checkbox" name="commonPerk" id="nod4">
+                <div>Weighted Bullets
+                    <small class="d-block text-body-secondary">+20% Damage, -25% Max Ammo.</small>
+                </div>
+            </label>
+            <label class="list-group-item list-group-item-warning d-flex gap-2">
+                <input type="checkbox" name="commonPerk" id="nod5">
                 <div>Bounty Hunter
                     <small class="d-block text-body-secondary">+15% Damage to special zombies.</small>
                 </div>
             </label>
             <label class="list-group-item list-group-item-warning d-flex gap-2">
-                <input type="checkbox" name="commonPerk" id="nod5">
+                <input type="checkbox" name="commonPerk">
                 <div>Veteran I
                     <small class="d-block text-body-secondary">+15% Reloading speed. The reloading speed bonus is stackable but can't be higher than 50%.</small>
                 </div>
             </label>
             <label class="list-group-item list-group-item-warning d-flex gap-2">
                 <input type="checkbox" name="commonPerk">
-                <div>Combat Ready
-                    <small class="d-block text-body-secondary">Refilling ammo from an ammunition crate instantly reloads this weapon.</small>
-                </div>
-            </label>
-            <label class="list-group-item list-group-item-warning d-flex gap-2">
-                <input type="checkbox" name="commonPerk">
-                <div>Ammo Pouches
-                    <small class="d-block text-body-secondary">+10% Max ammo for this weapon.</small>
+                <div>Unloading Vest
+                    <small class="d-block text-body-secondary">+20% Max ammo, -25% Sprint stamina.</small>
                 </div>
             </label>
 
