Added T3-Multishot content, completed

--- a/weapon_pages/weapon.html
+++ b/weapon_pages/weapon.html
@@ -293,7 +293,7 @@
             </div>
             <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
-                    <img src="../images/t3-cross.jpeg" class="card-img-top">
+                    <a href="stats/t3cross.html"><img src="../images/t3-cross.jpeg" class="card-img-top"></a>
                     <div class="card-body text-center">
                         <small class="card-title text-light">Crossbow</small>
                     </div>
@@ -301,7 +301,7 @@
             </div>
             <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
-                    <img src="../images/t3-multiS.jpeg" class="card-img-top">
+                    <a href="stats/t3multishot.html"><img src="../images/t3-multiS.jpeg" class="card-img-top"></a>
                     <div class="card-body text-center">
                         <small class="card-title text-light">Multi-Barreled Shotgun</small>
                     </div>
