Added T3-Repeating Rifle content, completed

--- a/weapon_pages/weapon.html
+++ b/weapon_pages/weapon.html
@@ -309,7 +309,7 @@
             </div>
             <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
-                    <img src="../images/t3-repeatR.jpeg" class="card-img-top">
+                    <a href="stats/t3repeat.html"><img src="../images/t3-repeatR.jpeg" class="card-img-top"></a>
                     <div class="card-body text-center">
                         <small class="card-title text-light">Repeating Rifle</small>
                     </div>
