Added light, medium, and heavy melee content, completed

--- a/weapon_pages/weapon.html
+++ b/weapon_pages/weapon.html
@@ -335,7 +335,7 @@
             </div>
             <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
-                    <img src="../images/knives.jpeg" class="card-img-top">
+                    <a href="stats/dualknives.html"><img src="../images/knives.jpeg" class="card-img-top"></a>
                     <div class="card-body text-center">
                         <small class="card-title text-light">Dual Knives</small>
                     </div>
@@ -343,7 +343,7 @@
             </div>
             <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
-                    <img src="../images/sickles.jpeg" class="card-img-top">
+                    <a href="stats/dualsickle.html"><img src="../images/sickles.jpeg" class="card-img-top"></a>
                     <div class="card-body text-center">
                         <small class="card-title text-light">Dual Sickles</small>
                     </div>
@@ -351,7 +351,7 @@
             </div>
             <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
-                    <img src="../images/cleaver.jpeg" class="card-img-top">
+                    <a href="stats/dualcleaver.html"><img src="../images/cleaver.jpeg" class="card-img-top"></a>
                     <div class="card-body text-center">
                         <small class="card-title text-light">Duel Cleavers</small>
                     </div>
@@ -359,7 +359,7 @@
             </div>
             <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
-                    <img src="../images/sai.jpeg" class="card-img-top">
+                    <a href="stats/dualsai.html"><img src="../images/sai.jpeg" class="card-img-top"></a>
                     <div class="card-body text-center">
                         <small class="card-title text-light">Dual Sai</small>
                     </div>
@@ -377,7 +377,7 @@
             </div>
             <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
-                    <img src="../images/machete.jpeg" class="card-img-top">
+                    <a href="stats/machete.html"><img src="../images/machete.jpeg" class="card-img-top"></a>
                     <div class="card-body text-center">
                         <small class="card-title text-light">Machete</small>
                     </div>
@@ -385,7 +385,7 @@
             </div>
             <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
-                    <img src="../images/katana.jpeg" class="card-img-top">
+                    <a href="stats/katana.html"><img src="../images/katana.jpeg" class="card-img-top"></a>
                     <div class="card-body text-center">
                         <small class="card-title text-light">Wakizashi</small>
                     </div>
@@ -393,7 +393,7 @@
             </div>
             <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
-                    <img src="../images/lobo.jpeg" class="card-img-top">
+                    <a href="stats/lobo.html"><img src="../images/lobo.jpeg" class="card-img-top"></a>
                     <div class="card-body text-center">
                         <small class="card-title text-light">Lobo</small>
                     </div>
@@ -401,7 +401,7 @@
             </div>
             <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
-                    <img src="../images/tomahawk.jpeg" class="card-img-top">
+                    <a href="stats/tomahawk.html"><img src="../images/tomahawk.jpeg" class="card-img-top"></a>
                     <div class="card-body text-center">
                         <small class="card-title text-light">Tomahawk</small>
                     </div>
@@ -409,7 +409,7 @@
             </div>
             <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
-                    <img src="../images/hammer.jpeg" class="card-img-top">
+                    <a href="stats/hammer.html"><img src="../images/hammer.jpeg" class="card-img-top"></a>
                     <div class="card-body text-center">
                         <small class="card-title text-light">Hammer</small>
                     </div>
@@ -417,7 +417,7 @@
             </div>
             <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
-                    <img src="../images/fireAxe.jpeg" class="card-img-top">
+                    <a href="stats/fireaxe.html"><img src="../images/fireAxe.jpeg" class="card-img-top"></a>
                     <div class="card-body text-center">
                         <small class="card-title text-light">Fire Axe</small>
                     </div>
@@ -425,7 +425,7 @@
             </div>
             <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
-                    <img src="../images/baton.jpeg" class="card-img-top">
+                    <a href="stats/baton.html"><img src="../images/baton.jpeg" class="card-img-top"></a>
                     <div class="card-body text-center">
                         <small class="card-title text-light">Baton</small>
                     </div>
@@ -443,7 +443,7 @@
             </div>
             <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
-                    <img src="../images/heavyFire.jpeg" class="card-img-top">
+                    <a href="stats/heavyfireaxe.html"><img src="../images/heavyFire.jpeg" class="card-img-top"></a>
                     <div class="card-body text-center">
                         <small class="card-title text-light">Heavy Fire Axe</small>
                     </div>
@@ -451,7 +451,7 @@
             </div>
             <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
-                    <img src="../images/bat.jpeg" class="card-img-top">
+                    <a href="stats/basebat.html"><img src="../images/bat.jpeg" class="card-img-top"></a>
                     <div class="card-body text-center">
                         <small class="card-title text-light">Baseball Bat</small>
                     </div>
@@ -459,7 +459,7 @@
             </div>
             <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
-                    <img src="../images/sword.jpeg" class="card-img-top">
+                    <a href="stats/sword.html"><img src="../images/sword.jpeg" class="card-img-top"></a>
                     <div class="card-body text-center">
                         <small class="card-title text-light">Sword</small>
                     </div>
@@ -467,7 +467,7 @@
             </div>
             <div class="col-md-4 col-6 d-flex justify-content-center ">
                 <div class="card border-0">
-                    <img src="../images/sledge.jpeg" class="card-img-top">
+                    <a href="stats/shammer.html"><img src="../images/sledge.jpeg" class="card-img-top"></a>
                     <div class="card-body text-center">
                         <small class="card-title text-light">Sledgehammer</small>
                     </div>
